[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "01memories"
version = "0.0.23"
authors = [
  { name="Bernd Kalbfuss", email="kalbfuss@gmx.net" },
]
description = "A digital photo frame application."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dependencies = [
  "exifread",
  "ffmpeg-python",
  "geopy",
  "IPTCInfo3",
  "Kivy",
  "paho-mqtt",
  "pillow",
  "pyyaml",
  "rclone-python",
  "schedule",
  "SQLAlchemy",
  "webdavclient3"
]

[project.urls]
Homepage = "https://github.com/kalbfuss/01memories"
Issues = "https://github.com/kalbfuss/01memories/issues"

[tool.hatch.build.targets.wheel]
packages = [
  "src/pyframe",
  "src/repository"
]

[tool.hatch.build.targets.wheel.shared-data]
"config" = "share/01memories/config"
"examples" = "share/01memories/examples"
"doc" = "share/doc/01memories"
"bin" = "bin"
